--- a/home.html
+++ b/home.html
@@ -62,7 +62,7 @@
       <h2 class="heading"> User Interviews </h2>
       <h3 class="btext"> Interview Questions </h3>
 	<ol class="btext">
-  	  <li>What is your experience using a sewing machine?</li>
+  	  <li>What is your previous experience using a sewing machine?</li>
   	  <li>What interactions come to mind when thinking of sewing?</li>
   	  <li>What was your initial reaction to this sewing machine?</li>
   	  <li>What thoughts were going through your head throughout this process?</li>
@@ -118,16 +118,20 @@ l</li>
 		<h2 class="btext">Eva</h2>
 		<p class="btext">Eva used a sewing machine when she was 11, and now she’s trying to mend a dress to wear to a dinner party. She only needs to do a single straight stitch but doesn’t remember how to thread the machine.</p>
 		<img src="empathy-map-eva.svg" alt="Empathy map of Eva." class="image">
+		<p class="btext">Eva represents a new or inexperienced user. The main problem she faces is mapping the user manual instructions and labeled drawings into action. She struggles to interpret the state of the machine to determine whether her intentions were met.</p>
 	  </div>
 	  <div class="block2">
 		<h2 class="btext">Angel</h2>
-		<p class="btext">Angel regularly uses his machine for hours at a time to make custom clothes for his online shop. He works as quickly as he can and uses complicated stitches and settings for different materials.</p>
+		<p class="btext">Angel regularly uses his sewing machine for hours at a time to make custom clothes for his online shop. He works as quickly as he can and uses complicated stitches and settings for different materials.</p>
 		<img src="empathy-map-angel.svg" alt="Empathy map of Angel." class="image">
+		<p class="btext">Angel represents an experienced user who often uses this machine. His problems with the interface are things that slow him down and interrupt his experience: the speed of the machine, changing the bobbin, and breaking a needle.</p>
 	  </div>
 	</div>
     </div>
     <div class ="section">
       <h2 class="heading"> Storyboard </h2>
+      <p class="btext">To visually explore my persona’s experience using the sewing machine, I created a storyboard of Eva’s user journey from start to end.</p>
+      <img src="storyboard.svg" alt="Storyboard visualizing the persona Eva using the sewing machine." class="image">
     </div>
   </body>
 </html>
