added context and results

--- a/home.html
+++ b/home.html
@@ -12,17 +12,20 @@
     <!-- TODO: put your HTML code here! -->
     <div class="title">
 	<h1> personas + storyboarding </h1>
-    </div>
+	</div>
+	<div class="section">
+		<h2 class="btext"> The design of the sewing machine has changed little since 1851. Does today's computerized machine meet the needs of the modern user? </h2>
+	</div>
     <div class="section">
 	<h2 class="heading"> Interface </h2>
-	<p class="btext"> The interface I chose was a sewing machine—specifically the Brother CS5055PRW Project Runway Computerized Sewing Machine. Illustrated below, this machine is beginner-friendly while including a variety of stitches and settings for experienced users. To use the machine, the user must wind and insert the bobbin, thread the machine and needle, and finally sew by pressing the foot pedal while guiding the fabric. </p>
+	<p class="btext"> To explore the interface of the modern sewing machine, I focused on the Brother CS5055PRW Project Runway Computerized Sewing Machine. Illustrated below, this machine is beginner-friendly while including a variety of stitches and settings for experienced users. To use the machine, the user must wind and insert the bobbin, thread the machine and needle, and finally sew by pressing the foot pedal while guiding the fabric. </p>
         <img src="machine-sketch.svg" alt="Sketch of a sewing machine with labeled parts" class="image" id="sketch">
     </div>
     <div class ="section">
       <h2 class="heading"> User Observations </h2>
       <p class="btext"> I observed three users of different experience levels using the sewing machine. With the aid of the user manual and labeled drawings on the sewing machine, they each wound the bobbin, threaded the needle, and sewed a straight line on a piece of fabric. </p>
 	<div class="grid-1by3">
-          <div class=block1">
+          <div class="block1">
 		<h3 class="btext">User 1</h3>
 		<h5 class="btext">Has never used a sewing machine</h5>
 		<ul class="btext">
@@ -34,7 +37,7 @@
 			<li>Asked for verbal confirmation</li>
 		</ul>
           </div>
-          <div class=block2">
+          <div class="block2">
 	  	<h3 class="btext">User 2</h3>
 		<h5 class="btext">Has not used a sewing machine since they were 12</h5>
 		<ul class="btext">
@@ -44,7 +47,7 @@
 			<li>“This machine is so weird”</li>
 		</ul>
 	  </div>
-          <div class=block3">
+          <div class="block3">
 	  	<h3 class="btext">User 3</h3>
 		<h5 class="btext">Regularly uses the exact model of sewing machine</h5>
 		<ul class="btext">
@@ -75,7 +78,7 @@
 	</ol>
       <h3 class="btext"> Interview Responses </h3>
 	<div class="grid-1by3">
-          <div class=block1">
+          <div class="block1">
 		<h3 class="btext">User 1</h3>
 		<ul class="btext">
 			<li>Initial reaction was that the machine looked high tech</li>
@@ -86,7 +89,7 @@
 			<li>Thought that the drawings on the machine and the user manual should be color coded, but rated them both an 8 for helpfulness</li>
 		</ul>
           </div>
-          <div class=block2">
+          <div class="block2">
 	  	<h3 class="btext">User 2</h3>
 		<ul class="btext">
 			<li>Was thinking “oh god, am I doing this wrong?” throughout the process
@@ -97,7 +100,7 @@ l</li>
 			<li>Rated the helpfulness of the drawings as an 8</li>
 		</ul>
 	  </div>
-          <div class=block3">
+          <div class="block3">
 	  	<h3 class="btext">User 3</h3>
 		<ul class="btext">
   	  		<li>Despite not using the machine in a few months, it was instinctive and he did things without realizing</li>
@@ -132,6 +135,10 @@ l</li>
       <h2 class="heading"> Storyboard </h2>
       <p class="btext">To visually explore my persona’s experience using the sewing machine, I created a storyboard of Eva’s user journey from start to end.</p>
       <img src="storyboard.svg" alt="Storyboard visualizing the persona Eva using the sewing machine." class="image">
-    </div>
+	</div>
+	<div class="section">
+		<h2 class="heading"> Results </h2>
+		<p class="btext"> While the experienced user operated the sewing machine with ease, it's clear that the interface is inaccessible to new users. When winding the bobbin and threading the machine, users struggled with both execution (mapping their intentions to specific actions) and evaluation (interpreting the state of the system to determine whether their intentions were met). </p>
+		</div>
   </body>
 </html>
