updated bg colors

--- a/home.html
+++ b/home.html
@@ -92,8 +92,7 @@
           <div class="block2">
 	  	<h3 class="btext">User 2</h3>
 		<ul class="btext">
-			<li>Was thinking “oh god, am I doing this wrong?” throughout the process
-l</li>
+			<li>Was thinking “oh god, am I doing this wrong?” throughout the process</li>
 			<li>Struggled to figure out how to wind the bobbin since it was different from the machine she was used to</li>
 			<li>After winding the bobbin, found the remaining steps intuitive</li>
 			<li>Thought the order of drawings on the machines was unclear, and they should be located in different areas</li>
